--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,26 @@
 language: elixir
-elixir:
-  - 1.3.4
-  - 1.4.5
-  - 1.5.0
+
+matrix:
+  include:
+    - otp_release: 18.3
+      elixir: 1.3.4
+    - otp_release: 19.3
+      elixir: 1.3.4
+
+    - otp_release: 18.3
+      elixir: 1.4.5
+    - otp_release: 19.3
+      elixir: 1.4.5
+    - otp_release: 20.0
+      elixir: 1.4.5
+
+    - otp_release: 18.3
+      elixir: 1.5.0
+    - otp_release: 19.3
+      elixir: 1.5.0
+    - otp_release: 20.0
+      elixir: 1.5.0
+
 sudo: false
 notifications:
   recipients:
